# itmo_practics

./: .gitignore  DEPLOYMENT.md  README.md  bench_all.py  benchmark_results.json  run_tests.ps1  run_tests.sh  seed_all.py  start_all.ps1  start_all.sh  stop_all.ps1  stop_all.sh
.github/workflows/: ci.yml
.gitverse/workflows/: ci.yaml
core/: Dockerfile  docker-compose.yml  locustfile.py  pyproject.toml  pytest.ini
core/app/: models.py  serializers.py  urls.py  views.py
core/core/: settings.py  urls.py
core/tests/: test_flow.py  test_latency.py  test_throughput.py
core/tests/results/: latency_users_baseline.json  throughput_users.json
django_microservice/: .dockerignore  Dockerfile  pyproject.toml
django_microservice/app/: health.py  middleware.py  monitoring.py  serializers.py  urls.py  views.py
django_microservice/app/management/commands/: seed_db.py
django_microservice/app/migrations/: 0001_initial.py
django_microservice/core/: settings.py  urls.py
django_microservice/tests/: test_throughput.py
fastapi_microservice/: Dockerfile  docker-compose.yml  locustfile.py  pyproject.toml
fastapi_microservice/app/: crud.py  db.py  main.py  models.py  monitoring.py  schemas.py
fastapi_microservice/app/tests/: latency_users_fastapi.json  test_latency.py  test_throughput.py  throughput_users_fastapi.json
gateway/: docker-compose.yml  nginx.conf
litestar_microservice/: Dockerfile  docker-compose.yml  locustfile.py  pyproject.toml
litestar_microservice/app/: crud.py  db.py  main.py  monitoring.py  schemas.py
litestar_microservice/app/tests/: test_latency.py  test_throughput.py
robyn_microservice/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  run.py
robyn_microservice/app/: crud.py  db.py  main.py  models.py
robyn_microservice/app/tests/: test_latency.py  test_throughput.py
