[project]
name = "fastapi-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "cerg",email = "cerg0909@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }

sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"

pydantic = {extras = ["email"], version = "^2.9.2"}
psutil = "^6.0.0"
orjson = "^3.10"

httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
locust = "^2.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"