[project]
name = "robyn-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "cerg", email = "cerg0909@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry.dependencies]
python = "^3.12"

robyn = "^0.63"

sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"

psutil = "^6.0.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
locust = "^2.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
